# LitePolis

./: Dockerfile  LICENSE  MANIFEST.in  README.md  db.sql  pyproject.toml  quickstart.sh  requirements.txt  setup.py
.github/workflows/: tests.yml
doc/: README.md  architect.md  database.md  db.dbml  features.md  sphinx-gen.sh
doc/api/: README.md  conf.py  db.rst  index.rst  main.rst  route.rst
litepolis/: README.md  RouterInterface.py  __init__.py  core.py  db.py  main.py  rbac_policy.csv  test_core.py  test_db.py  utils.py
litepolis/middleware/: BasicAuth.py
litepolis/routers/: public.py  secure.py
src/: Dockerfile  Dockerfile-api  db.sql  dockerfile  example.env  quickstart.sh  rbac_model.conf  rbac_policy.csv  test_db.py  test_main.py
src/api/: Dockerfile  README.md  auth.py  db.py  main.py  requirements.txt  test_db.py  test_main.py
src/api/ routers/: public.py  secure.py
src/api/routers/: public.py  secure.py
src/middleware/: BasicHeaderAuth.py  RBAC.py
src/routers/: secure.py
src/sdk/python/: README.md  pyproject.toml  setup.py  tox.ini
src/sdk/python/docs/: APIKeysApi.md  CommentModel.md  CommentResponse.md  CommentResponseMessage.md  CommentsApi.md  ConversationModel.md  ConversationResponse.md  ConversationResponseMessage.md  ConversationsApi.md  DefaultApi.md  Detail.md  Detail1.md  Detail2.md  HTTPValidationError.md  ResponseMessage.md  UserApi.md  UserProfile.md  UserResponseMessage.md  ValidationError.md  ValidationErrorLocInner.md
src/sdk/python/litepolis_client/: __init__.py  api_client.py  configuration.py  rest.py
src/sdk/python/test/: test_api_keys_api.py  test_comment_model.py  test_comment_response.py  test_comment_response_message.py  test_comments_api.py  test_conversation_model.py  test_conversation_response.py  test_conversation_response_message.py  test_conversations_api.py  test_default_api.py  test_detail.py  test_detail1.py  test_detail2.py  test_http_validation_error.py  test_response_message.py  test_user_api.py  test_user_profile.py  test_user_response_message.py  test_validation_error.py  test_validation_error_loc_inner.py
src/sdk/typescript/: APIKeysApi.md  CommentsApi.md  ConversationsApi.md  DefaultApi.md  UserApi.md  index.ts
src/sdk/typescript/apis/: APIKeysApi.ts  CommentsApi.ts  ConversationsApi.ts  DefaultApi.ts  UserApi.ts
src/sdk/typescript/auth/: auth.ts
src/sdk/typescript/models/: CommentModel.ts  CommentResponse.ts  ConversationModel.ts  (+13 more)
src/ui/: Dockerfile  main.py  requirements.txt
src/ui/pages/: dashboard.py  portal.py
tests/: test_packages_file.py
(+24 files in other folders)
